expo install comments added

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,12 @@ hw1/.DS_Store
 Videos
 Icon?
 node_modules
+pdfs/004-2.pdf
+pdfs/004.pdf
+pdfs/Hookhs.drawio
+pdfs/Hooks.pdf
+pdfs/hooks2.pdf
+pdfs/hooks3.pdf
+pdfs/redux2.pdf
+pdfs/reduxcodepen.pdf
+pdfs/Screenshot 2020-04-29 at 12.21.00.pdf
